# Automa-es-do-Notion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN-WORKSPACE-NOTION.md  IA.md  README.md  SYNC.md  bootstrap.py  check-dev.py  mapa.html  mapa.json  pyproject.toml  start_app.py  sync.ps1  sync.py  sync.sh  test_surrogate_simple.py
.github/workflows/: ci.yml
cli/: notion_tasks.py
docs/: AGENTES.md  CONTRATOS.md  DIAGNOSTICO_PROBLEMA_CLI.md  ESCALA.md  GITHUB-DATABASE.md  IA-CAMADA.md  IDEIAS-EXTRAS.md  INFRA.md  INTEGRACOES.md  MCP.md  MODELOS-DE-USO.md  MODULARIZACAO.md  OTIMIZACAO.md  PLANO.md  PORTABILIDADE.md  PREVENCAO_STATUS_INVALIDO.md  QUALIDADE.md  README.md  SAAS.md  TESTE-WEB-2026-06-30.md
docs/Guia do multiagentes/: felixo-canvas-2026-06-25.fxcanvas  nota-1782367767970.md
docs/ia-archive/: IA-ARCHIVE-2026-06.md
examples/: coletar_mapa.py  gerar_arvore_html.py
front/: README.md
front/src/: App.jsx
front/src/api/: client.js
front/src/components/tarefas/: filtros.jsx  painel-tarefas.jsx  tarefa-card.jsx  tarefa-form.jsx  view-kanban.jsx  view-lista.jsx
front/src/components/ui/: badge.jsx  modal.jsx
front/src/hooks/: use-tarefas.js
front/src/utils/: status-color.js
scripts/: analisar_modularizacao.py  diagnostico_notion.py  quality_check.py
server/: mcp_server.py
server/api/: serializers.py  urls.py  views.py
server/config/: urls.py
server/integrations/: github.py  openrouter.py
server/operations/: models.py
server/services/: conteudo.py  ia.py  ingestao.py  inventario_github.py  sincronizar_github.py  tarefas.py
server/static/js/: app.js
server/templates/: tarefas.html
src/notion_starter/: __init__.py  client.py  constants.py  content.py  inventory.py  properties.py  tasks.py
tests/: conftest.py  test_api_tarefas.py  test_cli_notion_tasks.py  test_client.py  test_content.py  test_front.py  test_integrations_github.py  test_integrations_openrouter.py  test_inventory.py  test_mcp_server.py  test_prevencao_json_surrogate.py  test_properties.py  test_services_conteudo.py  test_services_ia.py  test_services_ingestao.py  test_services_inventario_github.py  test_services_sincronizar.py  test_services_tarefas.py  test_start_app.py  test_tasks.py
