[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-starter-boilerplate"
version = "0.1.0"
description = "Boilerplate tipado para iniciar projetos sobre a API do Notion: cliente HTTP, helpers de propriedades e validação de schema, prontos para clonar e adaptar."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "notion-starter-boilerplate contributors" }]
keywords = ["notion", "notion-api", "client", "boilerplate", "starter", "template", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "ruff>=0.4",
]
# Dependências do servidor Django (Fase 2+). Instale com: pip install -e ".[server]"
server = [
    "django>=5.0",
]

[project.urls]
Homepage = "https://github.com/flaviavs-commits/notion-starter-boilerplate"
Repository = "https://github.com/flaviavs-commits/notion-starter-boilerplate"
Issues = "https://github.com/flaviavs-commits/notion-starter-boilerplate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_starter"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Migrações do Django são autogeradas — não as linta.
extend-exclude = ["server/**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
