[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automacoes-do-notion"
version = "0.1.0"
description = "Aplicação local para operar o Notion com API Django, SPA React, CLI/MCP para IA e inventário GitHub."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Automações do Notion contributors" }]
keywords = ["notion", "notion-api", "automation", "django", "react", "mcp", "github"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "ruff>=0.4",
]
# Dependências do servidor Django (Fase 2+). Instale com: pip install -e ".[server]"
server = [
    "django>=5.0",
]
# Dependências do servidor MCP (Fase 6). Instale com: pip install -e ".[mcp]"
mcp = [
    "mcp>=1.28,<2",
]

[project.urls]
Homepage = "https://github.com/Felipe-Alcantara/Automa-es-do-Notion"
Repository = "https://github.com/Felipe-Alcantara/Automa-es-do-Notion"
Issues = "https://github.com/Felipe-Alcantara/Automa-es-do-Notion/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_starter"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Migrações do Django são autogeradas — não as linta.
extend-exclude = ["server/**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
